--- a/unit1_projects/stylesheets/technical_blog_3_reviews.css
+++ b/unit1_projects/stylesheets/technical_blog_3_reviews.css
@@ -49,6 +49,9 @@ h4 {
 	padding: 5px;
 	margin-top: 100px;
 	margin-left: 75px;
+	border: 2px solid #EFEFEF;
+	border-radius: 25px;
+	box-shadow: 3px 3px 3px #000000;
 }
 
 
