--- a/unit1_projects/stylesheets/technical_blog_template.css
+++ b/unit1_projects/stylesheets/technical_blog_template.css
@@ -33,11 +33,9 @@ h2 {
 	padding: 5px;
 	margin-top: 100px;
 	margin-left: 75px;
-}
-
-blog_post_title {
-	padding: 5px;
-	margin-left: 75px;
+	border: 2px solid #EFEFEF;
+	border-radius: 25px;
+	box-shadow: 3px 3px 3px #000000;
 }
 
 
