--- a/unit1_projects/stylesheets/index_page.css
+++ b/unit1_projects/stylesheets/index_page.css
@@ -10,7 +10,7 @@ caption {
 
 /* Header */
 .header {
-	width: 1280px;
+	width: 100%;
 	height: 100px;
 	background-color: 	#FFF1E2;
 	margin: 0px;
@@ -76,10 +76,10 @@ caption {
 /* Sidebar Left or Column One*/
 
 .sidebar_left {
-	width: 200px;
+	width: 15%;
 	height: 1800px;
-	margin: 5px 5px 20px -630px;
-	border-right: 1px dashed #000;
+	margin: 5px 20px 20px -630px;
+/*	border-right: 1px dashed #000; */
 	display: inline-block;
 	float: left;
 }
@@ -112,10 +112,10 @@ caption {
 	position: relative;
 	float: left;
 	font-family: "Verdant";
-	width: 600px;
+	width: 50%;
 	height: 1800px;
-	margin: 5px 5px 20px 50px;
-	border-right: 1px dashed #000;
+	margin: 5px 5px 5px 5px;
+/*	border-right: 1px dashed #000; */
 	padding: 10px;
 	display: inline-block;
 }
@@ -153,8 +153,8 @@ img {
 .sidebar_right {
 	position: relative;
 	float: right;
-	width: 200px;
-	height: 2000px;
+	width: 15%;
+	height: 1800px;
 	display: inline-block;
 }
 
