--- a/unit2_projects/week_5/stylesheets/wk5_cultural_blog.css
+++ b/unit2_projects/week_5/stylesheets/wk5_cultural_blog.css
@@ -10,7 +10,7 @@ caption {
 
 /* Header */
 .header {
-	width: 1240px;
+	width: 100%;
 	height: 100px;
 	background-color: #FFF1E2;
 	margin: 0px;
@@ -76,7 +76,7 @@ caption {
 
 .content {
 	font-family: "Verdant";
-	width: 1000px;
+	width: 100%;
 	height: 1540px;
 	margin: 5px 5px 5px 5px;
 	padding: 10px;
@@ -179,14 +179,15 @@ a:visited {
 /* Footer */
 
 .footer {
+	position: relative;
 	font-family: cursive;
 	background-color: #CCC6BF;
 	border: 5px solid #CCC6BF;
 	border-radius: 0px 0px 25px 25px;
-	width: 1240px;
+	width: 100%;
 	height: 40px;
 	margin: 10px;
-	display: inline-block;
+	display: inline;
 }
 
 .footer p {
